Fri Nov  1 18:57:02 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Changed includes/silcincludes.h to silcincludes.h.in to
	  include configuration specific information.  The silcdefs.h
	  is not included in to installation anymore (it's only
	  compilation time header).

Fri Nov  1 10:30:26 CET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Moved the SilcClient and SilcClientConnection from client.h
	  to the public lib/silcclient/silcclient.h.  Changed the
	  structures a bit.

Thu Oct 31 22:44:07 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* If version string in silc_clinet_alloc is NULL the library
	  puts it automatically.  Affected file lib/silcclient/client.c.

	* Changed the version strings from variables to #define's
	  in includes/silcversion.h.

Wed Oct 30 16:17:30 CET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added shared library complation support.

Tue Oct 29 21:48:55 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added lib/silcutil/silcapputil.[ch] for application
	  utility functions.  It includes routines for applications'
	  convenience.  Added silc_create_key_pair, silc_show_public_key
	  and silc_load_key_pair functions.

Tue Oct 29 17:36:44 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Send RESUME_CLIENT packet from router to backup routers
	  to in resuming.  Affected file silcd/packet_receive.c.

Mon Oct 28 21:23:39 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* In IDENTIFY command parsing, send all other IDs except
	  Client IDs explicitly to router for resolving on normal
	  server.  Also check that ID received in WHOIS command is
	  always Client ID, others are not allowed.  Affected file
	  silcd/server_query.c.

	* Merged latest changes from irssi.org CVS.

Sun Oct 27 11:44:32 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Merged c0ffee's /set heartbeat patch to Irssi SILC client.
	  Affected files irssi/src/silc/core/silc-core, silc-server.c.
